# ddz-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  core.h  ddz.sln  module.cpp  test.cpp
card/: CMakeLists.txt  demo_main.cpp
card/include/card/: rule.h  utils.h
card/src/: rule.cpp
cext/: README.md  cext.vcxproj  cext.vcxproj.filters  module.cpp  move.cpp  move.h
cextText/: cextText.vcxproj  pch.cpp  pch.h  test.cpp
ddz/: ddz.py  ddz.pyproj  ddz.vcxproj  ddz.vcxproj.filters  move.cpp
ddzTest/: ddzTest.vcxproj  pch.cpp  pch.h  test.cpp
pybind11/: CMakeLists.txt  ddz.cpp
samples/: CMakeLists.txt  demo.py  demo_main.cpp
src/: CMakeLists.txt  core.cpp  core.h  main.cpp  utils.cpp  utils.h
src/common/: CMakeLists.txt
src/rule/: CMakeLists.txt  rule.cpp
test/: test.cpp
tests/: CMakeLists.txt  rule_test.cpp  testCore.cpp  testRule.cpp
